# caffe_test

./: .gitignore  README.md
1/: Makefile  test_blob  test_blob.cpp
mnist/: compute_image_mean.sh  convert_imageset.sh  convert_imageset.sh.bk  lenet_deploy.prototxt  lenet_train_test.prototxt  test.txt  test_lenet.sh  trian_lenet.sh
mnist/data/: dbTotxt.py  dbTotxt.py.bk1  train.txt
mnist/data/origin_data/: TaindbToPNG.py  TestdbT0PNG.py
mnist/predict/: CMakeLists.txt  cmakeLists.txt  image_mean.binaryproto  lenet_iter_10000.caffemodel  predict.cpp  predict.sh  readme.txt
mnist_caffe_model/: lenet_lr.prototxt  lenet_lr_solver.prototxt  train_lenet.sh
mnist_caffe_model/mnist_test_lmdb/: lock.mdb
mnist_caffe_model/mnist_train_lmdb/: lock.mdb
net/: Makefile  net_demo.cpp
